--- a/BackendTest.csproj
+++ b/BackendTest.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.1" />
+    
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
