Foram adicionados autenticacao inicial com jwt e acesso ao banco de dados mysql

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AppSettings": {
+    "Secret": "u8x/A?D(G+KbPeShVmYp3s6v9y$B&E)H"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;userid=mysqluser;pwd=mysqlpass;port=3306;database=testdb"
   }
 }
