--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "Secret": "u8x/A?D(G+KbPeShVmYp3s6v9y$B&E)H"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;userid=mysqluser;pwd=mysqlpass;port=3306;database=testdb"
+  }
 }
